--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+    <title>BACON!</title>
+    <link href="style.css" rel="stylesheet" 
+    </head>>
+    <body>
+        <header>
+            <h1>
+                BACON IS THE BEST
+            </h1>
+        </header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="https://thryce86.github.io/html_project_1/index.html">
+                        Sponsors of the Page
+                </li>
+            </ul>
+        </nav>
+        <main>
+            <img src="https://thumbs.dreamstime.com/z/cooked-bacon-rashers-close-up-isolated-white-background-66309565.jpg">
+            <article>
+                <p>
+                    <h2>
+                        Reasons To Love BACON
+                    </h2>
+                    This Section illustrates Bacon in all of its Glory...I mean just look at that picture
+                </p>   
+            </article> 
+        </main>
+        <footer>
+            [insert something witty here]
+        </footer>       
+    </body>>
