--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-    <title>BACON!</title>
-    <link href="style.css" rel="stylesheet" 
-    </head>>
+        <title>BACON!</title>
+        <link href="style.css" rel="stylesheet" >
+    </head>
     <body>
         <header>
             <h1>
@@ -34,4 +34,4 @@
         <footer>
             [insert something witty here]
         </footer>       
-    </body>>
+    </body>
