added Javascript interactions with functions and loops

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
             <h1>
                 BACON IS THE BEST
             </h1>
+            <h2>
+                <script src="app.js"></script>
+            </h2>
+            <h3>
+               <script>displayRating()</script> 
+            </h3>
         </header>
         <nav>
             <ul>
